Добавляет сборку